fix dark mode thing below page

--- a/css/mainSiteStuff.css
+++ b/css/mainSiteStuff.css
@@ -13,7 +13,7 @@
 			position:fixed;
 			top:8px;
 			right:8px;
-			z-index:100;
+			z-index:1000;
 			text-align:center;
 			display:flex;
 			aspect-ratio:2;
